# qem-bench

./: .editorconfig  .env.example  .pre-commit-config.yaml  ADAPTIVE_RESEARCH_REPORT.md  ADVANCED_RESEARCH_COMPLETION_REPORT.md  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_GENERATION4_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_GENERATION4_FINAL_REPORT.md  BACKLOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  FINAL_GENERATION4_SUMMARY.md  FINAL_SDLC_COMPLETION_SUMMARY.md  GENERATION1_COMPLETION_REPORT.md  GENERATION2_3_COMPLETION_REPORT.md  GENERATION4_ADVANCED_RESEARCH_COMPLETION_REPORT.md  GENERATION4_COMPLETION_REPORT.md  MONITORING_SYSTEM.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROGRESSIVE_QUALITY_GATES.md  PROGRESSIVE_QUALITY_GATES_COMPLETION_REPORT.md  PROJECT_CHARTER.md  README.md  RESEARCH_CONTRIBUTION_SUMMARY.md  SCALING_FEATURES.md  SECURITY.md  SECURITY_FRAMEWORK.md  advanced_research_validation_demo.py  autonomous_sdlc_demo.py  demo_generation1.py  generation3_demo.py  generation3_simple_demo.py  generation4_demonstration.py  generation4_revolutionary_enhancement_demo.py  progressive_quality_gates_demo.py  progressive_quality_gates_simple_demo.py  (+5 more)
.devcontainer/: devcontainer.json  setup.sh
.terragon/: IMPLEMENTATION-SUMMARY.md  README.md  autonomous-executor.py  demo-discovery.py  discovery-metrics.json  sdlc-enhancements.yaml  start-autonomous.sh  value-config.yaml
docs/: QUANTUM_PLANNING.md  ROADMAP.md
docs/adr/: 0001-architecture-decision-record-template.md  0002-jax-backend-selection.md
examples/: adaptive_zne_research_demo.py  advanced_research_demo.py  monitoring_example.py  optimization_example.py  planning_example.py  scaling_example.py  security_example.py  vd_example.py
qem_env/: pyvenv.cfg
src/qem_bench/: __init__.py  _version.py  cli.py  errors.py  logging.py
src/qem_bench/analytics/: __init__.py  real_time_analytics.py
src/qem_bench/data/: __init__.py  models.py  storage.py
src/qem_bench/deployment/: production.py
src/qem_bench/errors/: recovery.py
src/qem_bench/globalization/: __init__.py  deployment.py  i18n.py
src/qem_bench/health/: __init__.py  backend_probes.py  dependency_checker.py  hardware_detector.py  health_checker.py
src/qem_bench/intelligence/: __init__.py  intelligent_optimizer.py
src/qem_bench/jax/: __init__.py  circuits.py  gates.py  observables.py  simulator.py  states.py
src/qem_bench/metrics/: __init__.py  circuit_metrics.py  exporters.py  metrics_collector.py  noise_metrics.py
src/qem_bench/mitigation/: __init__.py
src/qem_bench/monitoring/: __init__.py  alert_manager.py  dashboard.py  health.py  logger.py  monitored_zne.py  performance_monitor.py  quantum_resource_monitor.py  system_monitor.py
src/qem_bench/noise/: __init__.py
src/qem_bench/optimization/: __init__.py  annotations.py  auto_scaler.py  benchmarks.py  cache.py  cache_manager.py  jit_compiler.py  load_balancer.py  memory_manager.py  optimized_mitigation.py  parallel_executor.py  performance.py  performance_optimizer.py  profiler.py
src/qem_bench/orchestration/: __init__.py  backend_orchestrator.py
src/qem_bench/planning/: __init__.py  core.py  globalization.py  integration.py  metrics.py  optimizer.py  performance.py  recovery.py  scheduler.py  validation.py
src/qem_bench/quality_gates/: __init__.py  autonomous.py  core.py  gates.py  progressive.py
src/qem_bench/research/: __init__.py  adaptive_qem.py  automated_publication_framework.py  autonomous_publication_system.py  autonomous_research.py  causal_adaptive_qem.py  causal_error_mitigation.py  comprehensive_benchmark_suite.py  cross_platform_transfer.py  discovery.py  experimental.py  experimental_validation.py  hybrid_qem.py  integrated_validation.py  leaderboards.py  ml_qem.py  novel_algorithms.py  publication_framework.py  quantum_advantage.py  quantum_advantage_detection.py  utils.py  (+9 more)
tests/: conftest.py  test_generation4_revolutionary.py  test_planning_basic.py
tests/integration/: test_generation1_basic.py
tests/research/: test_advanced_research_modules.py
tests/security/: test_security_basic.py
tests/unit/: test_cli.py  test_jax_simulator.py  test_vd_core.py  test_zne_core.py
(+88 files in other folders)
